Added License and Readme

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "terminal_web_browser"
+name = "term_surf"
 version = "0.1.0"
 authors = ["Debmalya99 <debmalyamitra99@gmail.com>"]
 edition = "2018"
